--- a/problem5/package.json
+++ b/problem5/package.json
@@ -27,6 +27,7 @@
     "express-request-id": "^3.0.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "isomorphic-dompurify": "^2.26.0",
     "pino-http": "^10.5.0",
     "zod": "^4.1.8"
   },
@@ -34,6 +35,7 @@
     "@eslint/js": "^9.35.0",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
+    "@types/dompurify": "^3.0.5",
     "@types/express": "^5.0.3",
     "@types/express-rate-limit": "^5.1.3",
     "@types/express-request-id": "^1.4.3",
