--- a/problem5/package.json
+++ b/problem5/package.json
@@ -29,6 +29,7 @@
     "hpp": "^0.2.3",
     "isomorphic-dompurify": "^2.26.0",
     "pino-http": "^10.5.0",
+    "pino-pretty": "^13.1.1",
     "zod": "^4.1.8"
   },
   "devDependencies": {
